--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-mysql-connector-python
-pymysql
-sqlalchemy
-pandas 
-numpy
+chardet==3.0.4
+mysql_connector_repackaged==0.3.1
+numpy==1.22.4
+pandas==1.4.0
+SQLAlchemy==1.4.7
+streamlit==1.12.2
